# car_finder

./: .env.example  .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml  ruff.toml
migrations/: env.py
migrations/versions/: c0c83f8c2f7d_create_vehicle_table.py
src/: main.py  server.py
src/agent/: agent.py
src/core/: settings.py
src/database/: session.py
src/database/seed/: vehicle.py
src/integrations/: mcp.py
src/models/entities/: base.py  vehicle.py
src/models/enums/: __init__.py  constants.py
src/models/schemas/: vehicle.py
src/repositories/: vehicle.py
